--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 
     @media (max-width: 830px) {
       justify-content: center;
@@ -21,7 +22,7 @@
 
       h1 {
         padding: 1px;
-        font-size: 1.9rem;
+        font-size: 2rem;
         font-style: oblique;
         line-height: 30p;
         color:#e68e9a;
@@ -29,8 +30,8 @@
 
       p {
         font-style: oblique;
-        font-size: 18px;
-        font-weight: 300;
+        font-size: 16px;
+        font-weight: 100;
         color: var(--black);
         text-align: center;
         margin: 0.8rem 0;
@@ -57,6 +58,7 @@
 .propose {
   margin: 3rem 0;
   margin-top: 10%;
+  
  @media (max-width: 830px) {
      margin-top: 70%;
     }
@@ -89,7 +91,11 @@
         font-size: 1.9rem;
         font-weight: 800;
         line-height: 30px;
+        text-align: center;
         color:#e68e9a;
+      }
+      h3{
+        text-align: center;
       }
 
       p {
@@ -108,7 +114,7 @@
     .imgPropose {
       width: 49%;
       height: 510px;
-      background: url("../../assets/Captura de tela 2023-03-06 130400.png");
+      background: url("../../assets/Captura_de_tela_2023-03-06_130400-removebg-preview.png");
       background-position: center;
       background-repeat: no-repeat;
       background-size: contain;
@@ -162,7 +168,9 @@
 
 .propose2 {
   margin: 3rem 0;
-  
+  border-radius: 15px;
+          border: 2px solid  #e68e9a;
+          padding: 10px;
  @media (max-width: 830px) {
      margin-top: 70%;
     }
@@ -195,12 +203,24 @@
         font-size: 1.9rem;
         font-weight: 800;
         line-height: 30px;
+        text-align: center;
         color:#e68e9a;
       }
+      h2{
+        text-align: center;
+      }
 
-      p {
+      h3 {
         font-style: oblique;
         font-size: 18px;
+        text-align: center;
+        font-weight: 300;
+        color: var(--black);
+        margin: 0.8rem 0;
+      }
+      p {
+        
+        font-size: 14px;
         text-align: center;
         font-weight: 300;
         color: var(--black);
