--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -172,7 +172,7 @@
     .imgPropose4 {
       width: 49%;
       height: 510px;
-      background: url("../../assets/Captura_de_tela_2023-03-06_151251-removebg-preview.png");
+      background: url("../../assets/WhatsApp_Image_2023-03-08_at_15.22.54-removebg-preview.png");
       background-position: center;
       background-repeat: no-repeat;
       background-size: contain;
